--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,6 +102,45 @@ h1, h2, h3 ,h4 ,h5, h6 {
 	background-color: white;
 }
 
+// POSTER GRID
+#search-container {
+	margin: 20px 0 20px 0;
+}
+.poster {
+	margin: 20px 1% 20px 1%;
+	width: 47%;
+	display: inline-block;
+	position: relative;
+	border-radius: 4px;
+			box-shadow: 0px 0px 15px black;
+	&:after {
+		padding-top: 150%;
+		/* 16:9 ratio */
+		position: block;
+	}
+	&-img {
+		width: 100%;
+		height: 100%;
+		border-radius: 4px;
+	}
+	&-desc {
+		background-color: $accent-color;
+		border-radius: 4px;
+		opacity: .8;
+		position: absolute;
+		height: 0;
+		overflow: hidden;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+	}
+	p, h2 {
+		color:white;
+		text-align: center;
+	}
+}
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -114,5 +153,10 @@ h1, h2, h3 ,h4 ,h5, h6 {
 	}
 	.dropdown.dropdown-lg .dropdown-menu {
 			min-width: 500px;
+	}
+
+	.poster {
+		margin: 20px 2.5% 20px 2.5%;
+		width: 14.5%;
 	}
 }
