Fixed bootstrap icon path, fixed single quotes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,7 @@
 // Google Fonts
 @import url('https://fonts.googleapis.com/css?family=Exo+2:400,600');
 $exo-2-font: 'Exo 2', sans-serif;
-$icon-font-path: '../fonts/';
+$icon-font-path: '../../bower_components/bootstrap-sass/assets/fonts/bootstrap/';
 
 // Colors
 $bg-color: #1e252c;
