--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@ body {
 	font-weight: normal;
 	background-color: $bg-color;
 	color: white !important;
+	overflow-x: hidden;
 }
 
 h1, h2, h3 ,h4 ,h5, h6 {
@@ -55,10 +56,10 @@ h1, h2, h3 ,h4 ,h5, h6 {
 
 // SEARCH
 .dropdown.dropdown-lg .dropdown-menu {
-		margin-top: -1px;
-		padding: 6px 20px;
-		background-color: $bg-accent-color;
-		background-clip: border-box;
+	margin-top: -1px;
+	padding: 6px 20px;
+	background-color: $bg-accent-color;
+	background-clip: border-box;
 }
 .dropdown-toggle {
 	border: 0;
@@ -104,13 +105,15 @@ h1, h2, h3 ,h4 ,h5, h6 {
 
 // POSTER GRID
 #search-container {
-	margin: 20px 0 20px 0;
+	margin: 20px 0 50px 0;
 }
 .poster {
 	margin: 20px 1% 20px 1%;
 	width: 47%;
 	display: inline-block;
 	position: relative;
+	overflow: hidden;
+  	padding-bottom: 70%;
 	border-radius: 4px;
 			box-shadow: 0px 0px 15px black;
 	&:after {
@@ -122,6 +125,8 @@ h1, h2, h3 ,h4 ,h5, h6 {
 		width: 100%;
 		height: 100%;
 		border-radius: 4px;
+		position: absolute;
+  		margin: auto;
 	}
 	&-desc {
 		background-color: $accent-color;
@@ -141,22 +146,65 @@ h1, h2, h3 ,h4 ,h5, h6 {
 	}
 }
 
+.item-image img {
+
+}
+
+// SPINNER
+
+.spinner {
+	padding: 30px 0 30px 0;
+	display: none;
+	& div {
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		background-color: $accent-color;
+		border-radius: 50%;
+		animation: move 2.5s infinite cubic-bezier(.2,.64,.81,.23);
+		overflow: hidden;
+	}
+	& div:nth-child(2) {
+		animation-delay: 150ms;
+	}
+	& div:nth-child(3) {
+		animation-delay: 300ms;
+	}
+	& div:nth-child(4) {
+		animation-delay: 450ms;
+	}
+}
+
+@keyframes move {
+	0% {left: 0%;}
+	75% {left:100%;}
+	100% {left:100%;}
+}
+
+.detection-footer {
+    width: 100%;
+    height: 60px;
+    opacity: 0;
+    z-index: -1000;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
 	#adv-search {
-			width: 500px;
-			margin: 0 auto;
+		width: 500px;
+		margin: 0 auto;
 	}
 	.dropdown.dropdown-lg {
-			position: static !important;
+		position: static !important;
 	}
 	.dropdown.dropdown-lg .dropdown-menu {
-			min-width: 500px;
+		min-width: 500px;
 	}
 
 	.poster {
 		margin: 20px 2.5% 20px 2.5%;
 		width: 14.5%;
+		padding-bottom: 22%;
 	}
+
 }
